Bug 983465. Disable collapsing-text frame construction optimization on a per-document basis. r=bz

--HG--
extra : rebase_source : fc2059ac826e001660fb7233d775f8a046467f6b